# knock

./: .gitignore  Makefile.in  configure.ac
doc/: knock.1.in  knockd.1.in
src/: knock.c  knockd.c
